syntax = "proto3";

option go_package = "genprotos/";

package protos;

service NotificationService {
    rpc CreateNotification (CreateNotificationRequest) returns (NotificationResponse);
    rpc GetNotification (NotificationIdRequest) returns (NotificationResponse);
    rpc ListNotifications (ListNotificationsRequest) returns (ListNotificationsResponse);
}

message CreateNotificationRequest {
    string user_id = 1;
    string message = 2;
    string relation_id = 3; // Related entity (e.g., tender_id, bid_id)
    string type = 4; // "tender", "bid", etc.
}

message NotificationIdRequest {
    string id = 1;
}

message NotificationResponse {
    string id = 1;
    string user_id = 2;
    string message = 3;
    string relation_id = 4;
    string type = 5;
    string created_at = 6;
}

message ListNotificationsRequest {
    string user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message ListNotificationsResponse {
    repeated NotificationResponse notifications = 1;
}
